--- a/exe/webui/style/kids/nav.css
+++ b/exe/webui/style/kids/nav.css
@@ -6,8 +6,8 @@ body{padding:0;text-align:center;background:#aee7d3}
 
 .no-nav #main{padding:20px 40px 0 40px}
 
-#header,#emptyHeader{border-top-width:0;border-right-width:0;border-left-width:0;line-height:1em}
-#headerContent{overflow:hidden;white-space:nowrap;text-overflow:ellipsis;padding-right:230px;min-height:1.1em;padding-top:65px}
+#header,#emptyHeader{border-top-width:0;border-right-width:0;border-left-width:0;line-height:1.18em}
+#headerContent{padding-right:230px;min-height:1.5em;font-size:.9em;padding-top:5px}
 
 #nodeDecoration{background:none;padding:0;border:none;margin:20px 0;height:auto;font-size:1.6em;line-height:1em}
 h1#nodeTitle{font-weight:700;color:#1B4D3B}
@@ -72,8 +72,6 @@ h1#nodeTitle{font-weight:700;color:#1B4D3B}
 
 @media screen and (max-width: 980px) {
 	#main{padding:20px 30px 0 280px}
-	#headerContent{font-size:.9em}	
-	.iDeviceTitle {max-width:55%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-size:1.1em}
 	#siteNav{width:250px;margin-right:30px}
 	.pagination a{margin-right:20px}
 	#bottomPagination .next{right:20px}
